--- a/trunk/TP4/Informe/66.02 - TP4.Grupo.1.tex
+++ b/trunk/TP4/Informe/66.02 - TP4.Grupo.1.tex
@@ -257,12 +257,13 @@ De estos dos valores obtenidos resulta que:
 	En la práctica el efecto de carga es imposible de evitar, por lo que se midió el tiempo de crecimiento y la frecuencia de corte con los dos tipos de puntas disponibles, la \textit{X1}, y la \textit{X10}. El procedimiento para ambas fue el mismo y se pasan a enunciar.
 	\par
 	Para el tiempo de crecimiento, se utilizó el \textit{CH 2} del osciloscopio (que es el que mide la caída de tensión en el capacitor), y se midió el tiempo que le toma a la señal pasar del 10\% al 90\%. La exactitud en la sección horizontal proporcionada por el fabricante es del 3\% de la medida, más otro 3\% por linealidad. Además a esto hay que sumarle la incerteza por el error de lectura del usuario (mitad de la mínima división).
-\bigskip
+\bigskip\medskip
 
 
 
 %%% DESARROLLO - Medicion del tiempo de crecimiento - Medición con la punta X1
 \subsubsection{Medición con la punta \textit{X1}}
+\medskip
 	
 \textbf{\textit{Valor teórico}}
 \medskip
@@ -280,9 +281,12 @@ $T_c = 560 ns \pm 54 ns$\\
 \smallskip
 
 Aquí se puede apreciar que el valor teórico del tiempo de crecimiento cae dentro del rango de exactitud del valor medido, y que la diferencia entre ambos valores no es muy alta en relación a la magnitud de los valores.
+\bigskip\bigskip
+
 
 %%% DESARROLLO - Medicion del tiempo de crecimiento - Medición con la punta X10
 \subsubsection{Medición con la punta \textit{X10}} 
+\medskip
 
 \textbf{\textit{Valor teórico}}
 \medskip
@@ -301,9 +305,7 @@ $T_c = 240 ns \pm 35 ns$\\
 \smallskip
 
 En este caso, el valor teórico no entra dentro del intervalo de incertidumbre, aunque su distancia no es muy grande. 
-
-
-\bigskip
+\newpage
 
 
 
@@ -315,59 +317,9 @@ En este caso, el valor teórico no entra dentro del intervalo de incertidumbre, 
 	La forma de calcular esto fue medir el período de la señal, y luego medir el tiempo de desfase entre ambas señales, verificando la relación entre ambos tiempos.
 	\par
 	Las curvas de respuesta en frecuencia en cada caso se pueden observar en el gráfico de la \textit{Figura 2}. En el momento en que la relación de ambas tensiones cae por debajo de ${1 \over \sqrt{2}}$, signifca que se ha alcanzado la frecuencia de corte.
-\bigskip
+\bigskip\bigskip
 
 
-
-%%% DESARROLLO - Medición de la respuesta en frecuencia - Medición con la punta X1
-\subsubsection{Medición con la punta \textit{X1}}
-
-\textbf{\textit{Valor teórico}}
-\medskip
-
-$f_c = {1 \over 2 \pi RC} = 796 KHz$
-
-\medskip
-
-\textbf{\textit{Valor experimental}}
-\medskip
-
-	La frecuencia de corte fue medida con el contador una vez dadas las condiciones comentadas en el comienzo de la sección. Su valor es: \\
-
-
-$f_c = 580 kHz$
-\smallskip
-
-La diferencia entre los valores está dada casi completamente por el método utilizado para medir la frecuencia de corte, donde influye el usuario en mayor medida que la incertidumbre de los instrumentos.
-
-\medskip
-
-%%% DESARROLLO - Medición de la respuesta en frecuencia - Medición con la punta X10
-\subsubsection{Medición con la punta \textit{X10}}
-
-\textbf{\textit{Valor teórico}}
-\medskip
-
-$f_c = {1 \over 2 \pi RC} = 1,8 MHz$
-
-\medskip
-
-\textbf{\textit{Valor experimental}}
-\medskip
-
-	La frecuencia de corte fue medida con el contador una vez dadas las condiciones comentadas en el comienzo de la sección, su valor es:\\
-
-$f_c = 1,62 MHz$
-\smallskip
-
-Para este caso, la diferencia entre los valores tiene la misma explicación que la medición con la punta \textit{x1}
-
-\bigskip
-
-
-
-
-\newpage
 % Figura 2
 \begin{figure}[h]
 	\centering
@@ -376,6 +328,51 @@ Para este caso, la diferencia entre los valores tiene la misma explicación que 
 	\caption{Respuesta en frecuencia del circuito.}
 \end{figure}
 \bigskip
+
+
+
+%%% DESARROLLO - Medición de la respuesta en frecuencia - Medición con la punta X1
+\subsubsection{Medición con la punta \textit{X1}}
+\medskip
+
+\textbf{\textit{Valor teórico}}
+\medskip
+
+$f_c = {1 \over 2 \pi RC} = 796 KHz$
+\bigskip\medskip
+
+\textbf{\textit{Valor experimental}}
+\medskip
+
+	La frecuencia de corte fue medida con el contador una vez dadas las condiciones comentadas en el comienzo de la sección. Su valor es: \\
+
+$f_c = 580 kHz$ \\
+
+La diferencia entre los valores está dada casi completamente por el método utilizado para medir la frecuencia de corte, donde influye el usuario en mayor medida que la incertidumbre de los instrumentos.
+\bigskip\medskip
+
+
+
+%%% DESARROLLO - Medición de la respuesta en frecuencia - Medición con la punta X10
+\subsubsection{Medición con la punta \textit{X10}}
+\medskip
+
+\textbf{\textit{Valor teórico}}
+\medskip
+
+$f_c = {1 \over 2 \pi RC} = 1,8 MHz$
+
+\bigskip\medskip
+
+\textbf{\textit{Valor experimental}}
+\medskip
+
+	La frecuencia de corte fue medida con el contador una vez dadas las condiciones comentadas en el comienzo de la sección, su valor es:\\
+
+$f_c = 1,62 MHz$ \\
+
+Para este caso, la diferencia entre los valores tiene la misma explicación que la medición con la punta \textit{X1}
+\bigskip\medskip
 
 
 
@@ -416,6 +413,7 @@ Para una mejor apreciación, con los valores medidos en las primeras dos partes 
 \begin{equation*}
 	f_{c_{X10}} \times T_{c_{X10}} = 1,62 MHz \times 240 ns = 0,39
 \end{equation*}
+\bigskip\bigskip
 
 
 
@@ -424,9 +422,10 @@ Para una mejor apreciación, con los valores medidos en las primeras dos partes 
 \subsection{Determinación de la frecuencia de corte}
 	
 	Para la determinación de la frecuencia de corte se ha utilizado el banco de medición de la \textit{Figura 3}.
-\bigskip
+	 \par
+	Se determinó la frecuencia de corte del conjunto punta osciloscopio seteando una onda senoidal de amplitud 4V la cual fue conectada al canal A del osciloscopio. A este último instrumento lo seteamos para tener en este mismo canal una escala de 1V/DIV (punta X1) y 0,1V/DIV (punta X10). Una vez hecho esto se varió la frecuencia hasta encontrar el punto donde cae 70\% la amplitud. 
 
-
+\newpage
 % Figura 3
 \begin{figure}[h]
 	\centering
@@ -436,9 +435,7 @@ Para una mejor apreciación, con los valores medidos en las primeras dos partes 
 \end{figure}
 \bigskip
 
-	
-	Se determinó la frecuencia de corte del conjunto punta osciloscopio seteando una onda senoidal de amplitud 4V la cual fue conectada al canal A del osciloscopio. A este último instrumento lo seteamos para tener en este mismo canal una escala de 1V/DIV (punta X1) y 0,1V/DIV (punta X10). Una vez hecho esto se varió la frecuencia hasta encontrar el punto donde cae 70\% la amplitud. 
-	\par			
+			
 	En la \textit{Tabla 2} se muestran las frecuencias de corte observadas.
 \bigskip\bigskip
 
